# terradraw-workshop

./: .env.example  .gitignore  Pipfile  README.md  mkdocs.yml  pyproject.toml  zensical.toml
.claude/: launch.json
.claude/skills/foss4g2026-workshop/: SKILL.md
.claude/skills/foss4g2026-workshop/references/: implementation-plan.md  live-editor-widget.md  other-libraries-plan.md  terra-draw-v1-updates.md
docs/: index.md  support.md
docs/assets/live-editor/: live-editor.css  live-editor.js
docs/workshops/: index.md
docs/workshops/foss4g2025/: advanced.md  basics.md  getting-started.md  index.md  leaflet.md  maplibre-gl-terradraw.md  maplibre.md  multi-library.md  setup.md  support.md  troubleshooting.md
docs/workshops/foss4g2025/advanced/: data-management.md  events.md  exercise-3.md  exercise-4.md  exercise-5.md  exercise-6.md  index.md
docs/workshops/foss4g2025/basics/: data-structure.md  exercise-1.md  exercise-2.md  exercise-3.md  implementation.md  index.md  modes.md
docs/workshops/foss4g2025/maplibre/: basic-usage.md  exercise-5.md  production.md
docs/workshops/foss4g2025/multi-library/: comparison.md  exercise-6.md  leaflet.md  openlayers.md  universal.md
docs/workshops/foss4g2025/plugin/: index.md
docs/workshops/foss4g2025/setup/: project-setup.md
docs/workshops/foss4g2026/: getting-started.md  index.md  maplibre-gl-terradraw.md  other-libraries.md  support.md
scripts/: generate_keys.py
template/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
template/src/routes/: +page.svelte
(+37 files in other folders)
