[project]
name = "terradraw-workshop"
version = "0.0.0"
description = "Terra Draw workshop documentation"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-material",
    "mkdocs-caption",
    "mkdocs-git-authors-plugin",
    "mkdocs-git-revision-date-localized-plugin",
]

[tool.uv]
package = false
